more tests on PagedIterable